# Covid-Project3

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRESENTATION_GUIDE.md  docker-compose.yml  pyproject.toml
covid_dbt/: airflow.cfg  airflow.db  dbt_project.yml  profiles.yml.example
covid_dbt/infrastructure/streamlit/: app.py  environment.yml
covid_dbt/macros/: create_streamlit_app.sql  upload_to_stage.sql
covid_dbt/models/marts/: deaths_per_cases.sql  fct_covid_by_fips.sql  fct_deaths_per_cases.sql  schema.yml
covid_dbt/models/staging/: schema.yml  stg_cdc_cases.sql  stg_census.sql
covid_project3_dbt/: dbt_project.yml
covid_project3_dbt/models/marts/: fct_cases_per_100k_by_state.sql  fct_covid_by_fips.sql  fct_deaths_per_cases.sql  fct_monthly_case_trends.sql  ops_source_freshness.sql  schema.yml
covid_project3_dbt/models/staging/: schema.yml  stg_cdc_cases.sql  stg_census.sql
dags/: covid_cdc_ingestion_dag.py  covid_census_ingestion_dag.py  covid_dbt_mart_fct_cases_per_100k_by_state_dag.py  covid_dbt_mart_fct_covid_by_fips_dag.py  covid_dbt_mart_fct_deaths_per_cases_dag.py  covid_dbt_mart_fct_monthly_case_trends_dag.py  covid_dbt_mart_ops_source_freshness_dag.py  covid_dbt_marts_fct_covid_by_fips_dag.py  covid_dbt_staging_dag.py  covid_dbt_stg_cdc_cases_dag.py  covid_dbt_stg_census_dag.py  covid_ingestion_dag.py  covid_master_pipeline_dag.py
scripts/: dbt_safe.sh
src/covid_project3/: __init__.py  census_ingestion.py  config.py  ingestion.py  ingestion_test.py  main.py  streamlit_app.py
src/covid_project3/airflow/: __init__.py  cosmos_config.py
src/covid_project3/ingestion/: census_fetcher.py  engine.py  fetcher.py  uploader.py  verify.py
src/covid_project3/tmp/: cdc_batch_0.parquet  cdc_batch_1.parquet  cdc_batch_10.parquet  cdc_batch_100.parquet  cdc_batch_1000.parquet  (+2500 more)
