[project]
name = "covid-project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Balli", email = "ballir2727@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-snowflake>=1.11.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "snowflake-connector-python>=4.3.0",
]

[project.scripts]
covid-project3 = "covid_project3:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "S", "SIM", "RUF", "T20"]
